<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Rname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISC3"
        android:textAlignment="center"
        android:textSize="30sp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISC1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:autofillHints="name"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/Rname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISC2"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:autofillHints="password"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/Rpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISC4"
        android:textAlignment="center"
        android:textSize="30sp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxCeguera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DV"
        android:checked="false"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintTop_toBottomOf="@id/Rpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/checkBoxMR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MR"
        android:checked="false"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintTop_toBottomOf="@id/checkBoxCeguera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ISB2"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/checkBoxMR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>