<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/EmpGuiado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MVB1"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/Mapear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mapear"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/EmpGuiado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/Pasos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MVB3"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/Mapear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/Help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MVB4"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/Pasos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>