<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISC1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISC2"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ISB1"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ISB2"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/LogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>