<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedirPasos">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/movil"
        android:contentDescription="@string/Descripcion1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.shikaiji.guiadointeriores20.LoadingCircleView
        android:id="@+id/loadingCircleView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextoGuia"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:contentDescription="@string/PT1"
        android:text="@string/PT1"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingCircleView">
    </TextView>

    <Button
        android:id="@+id/BotonAccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Comenzar"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextoGuia" />





</androidx.constraintlayout.widget.ConstraintLayout>